test/test-data/cdk-with-stages.out/assembly-PreProdStage/PreProdStageAppStackE27EBDE4.template.json
{
 "Resources": {
  "NetworkVpc7FB7348F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/Resource"
   }
  },
  "NetworkVpcPublicSubnet1Subnet36933139": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1/Subnet"
   }
  },
  "NetworkVpcPublicSubnet1RouteTable30235CE2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "NetworkVpcPublicSubnet1RouteTableAssociation643926C7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2"
    },
    "SubnetId": {
     "Ref": "NetworkVpcPublicSubnet1Subnet36933139"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "NetworkVpcPublicSubnet1DefaultRoute31EC04EC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkVpcIGW6BEA7B02"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcPublicSubnet1RouteTable30235CE2"
    }
   },
   "DependsOn": [
    "NetworkVpcVPCGW8F3799B5"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "NetworkVpcPublicSubnet1EIPE0D52090": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1/EIP"
   }
  },
  "NetworkVpcPublicSubnet1NATGateway64781A21": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NetworkVpcPublicSubnet1EIPE0D52090",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NetworkVpcPublicSubnet1Subnet36933139"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "NetworkVpcPublicSubnet1DefaultRoute31EC04EC",
    "NetworkVpcPublicSubnet1RouteTableAssociation643926C7"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "NetworkVpcPublicSubnet2SubnetC427CCE0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2/Subnet"
   }
  },
  "NetworkVpcPublicSubnet2RouteTable0FACEBB2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "NetworkVpcPublicSubnet2RouteTableAssociationC662643B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2"
    },
    "SubnetId": {
     "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "NetworkVpcPublicSubnet2DefaultRoute0CF082AB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkVpcIGW6BEA7B02"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcPublicSubnet2RouteTable0FACEBB2"
    }
   },
   "DependsOn": [
    "NetworkVpcVPCGW8F3799B5"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "NetworkVpcPublicSubnet2EIP24F41572": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2/EIP"
   }
  },
  "NetworkVpcPublicSubnet2NATGateway42CB86F5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NetworkVpcPublicSubnet2EIP24F41572",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NetworkVpcPublicSubnet2SubnetC427CCE0"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "NetworkVpcPublicSubnet2DefaultRoute0CF082AB",
    "NetworkVpcPublicSubnet2RouteTableAssociationC662643B"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet2/NATGateway"
   }
  },
  "NetworkVpcPublicSubnet3Subnet4BBF7F47": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3/Subnet"
   }
  },
  "NetworkVpcPublicSubnet3RouteTable4F517CA2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3/RouteTable"
   }
  },
  "NetworkVpcPublicSubnet3RouteTableAssociationDBCF32A1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcPublicSubnet3RouteTable4F517CA2"
    },
    "SubnetId": {
     "Ref": "NetworkVpcPublicSubnet3Subnet4BBF7F47"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "NetworkVpcPublicSubnet3DefaultRoute320997B4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NetworkVpcIGW6BEA7B02"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcPublicSubnet3RouteTable4F517CA2"
    }
   },
   "DependsOn": [
    "NetworkVpcVPCGW8F3799B5"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3/DefaultRoute"
   }
  },
  "NetworkVpcPublicSubnet3EIP22F0C93C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3/EIP"
   }
  },
  "NetworkVpcPublicSubnet3NATGateway5DD3AF93": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NetworkVpcPublicSubnet3EIP22F0C93C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NetworkVpcPublicSubnet3Subnet4BBF7F47"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3"
     }
    ]
   },
   "DependsOn": [
    "NetworkVpcPublicSubnet3DefaultRoute320997B4",
    "NetworkVpcPublicSubnet3RouteTableAssociationDBCF32A1"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PublicSubnet3/NATGateway"
   }
  },
  "NetworkVpcPrivateSubnet1Subnet6DD86AE6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "NetworkVpcPrivateSubnet1RouteTable7D7AA3CD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "NetworkVpcPrivateSubnet1RouteTableAssociation327CA62F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcPrivateSubnet1RouteTable7D7AA3CD"
    },
    "SubnetId": {
     "Ref": "NetworkVpcPrivateSubnet1Subnet6DD86AE6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "NetworkVpcPrivateSubnet1DefaultRoute08635105": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkVpcPublicSubnet1NATGateway64781A21"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcPrivateSubnet1RouteTable7D7AA3CD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "NetworkVpcPrivateSubnet2Subnet1BDBE877": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "NetworkVpcPrivateSubnet2RouteTableC48862D1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "NetworkVpcPrivateSubnet2RouteTableAssociation89A2F1E8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcPrivateSubnet2RouteTableC48862D1"
    },
    "SubnetId": {
     "Ref": "NetworkVpcPrivateSubnet2Subnet1BDBE877"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "NetworkVpcPrivateSubnet2DefaultRouteA15DC6D5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkVpcPublicSubnet2NATGateway42CB86F5"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcPrivateSubnet2RouteTableC48862D1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "NetworkVpcPrivateSubnet3Subnet8ABFAF5C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet3/Subnet"
   }
  },
  "NetworkVpcPrivateSubnet3RouteTable7FC52A8D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet3/RouteTable"
   }
  },
  "NetworkVpcPrivateSubnet3RouteTableAssociation616B0E34": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NetworkVpcPrivateSubnet3RouteTable7FC52A8D"
    },
    "SubnetId": {
     "Ref": "NetworkVpcPrivateSubnet3Subnet8ABFAF5C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "NetworkVpcPrivateSubnet3DefaultRouteFE7FEBED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NetworkVpcPublicSubnet3NATGateway5DD3AF93"
    },
    "RouteTableId": {
     "Ref": "NetworkVpcPrivateSubnet3RouteTable7FC52A8D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "NetworkVpcIGW6BEA7B02": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PreProdStage/AppStack/Network/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/IGW"
   }
  },
  "NetworkVpcVPCGW8F3799B5": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NetworkVpcIGW6BEA7B02"
    },
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/VPCGW"
   }
  },
  "NetworkVpcRestrictDefaultSecurityGroupCustomResource491E144D": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "NetworkVpc7FB7348F",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "616138583583"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "NetworkCluster17B54D11": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Cluster/Resource"
   }
  },
  "NetworkClusterDefaultServiceDiscoveryNamespaceD090BA35": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "blog-dev.com",
    "Vpc": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Cluster/DefaultServiceDiscoveryNamespace/Resource"
   }
  },
  "NetworkCluster237516A5": {
   "Type": "AWS::ECS::ClusterCapacityProviderAssociations",
   "Properties": {
    "CapacityProviders": [
     "FARGATE",
     "FARGATE_SPOT"
    ],
    "Cluster": {
     "Ref": "NetworkCluster17B54D11"
    },
    "DefaultCapacityProviderStrategy": []
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Network/Cluster/Cluster"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-2:616138583583:security-group/",
             {
              "Fn::GetAtt": [
               "NetworkVpc7FB7348F",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-616138583583-us-east-2",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "../asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "ApiF70053CD": {
   "Type": "AWS::ApiGatewayV2::Api",
   "Properties": {
    "Name": "Api",
    "ProtocolType": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/Resource"
   }
  },
  "ApiDefaultStage189A7074": {
   "Type": "AWS::ApiGatewayV2::Stage",
   "Properties": {
    "ApiId": {
     "Ref": "ApiF70053CD"
    },
    "AutoDeploy": true,
    "StageName": "$default"
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/DefaultStage/Resource"
   }
  },
  "ApiVpcLinkSg585A62E1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security Group for API Gateway Vpc Link",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     },
     {
      "CidrIpv6": "::/0",
      "Description": "Allow all outbound ipv6 traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/VpcLinkSg/Resource"
   }
  },
  "ApiVpcLink4F321C68": {
   "Type": "AWS::ApiGatewayV2::VpcLink",
   "Properties": {
    "Name": "PreProdStageAppStackApiVpcLink043A91F1",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ApiVpcLinkSg585A62E1",
       "GroupId"
      ]
     }
    ],
    "SubnetIds": [
     {
      "Ref": "NetworkVpcPrivateSubnet1Subnet6DD86AE6"
     },
     {
      "Ref": "NetworkVpcPrivateSubnet2Subnet1BDBE877"
     },
     {
      "Ref": "NetworkVpcPrivateSubnet3Subnet8ABFAF5C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/VpcLink/Resource"
   }
  },
  "ApiGETpostsidgetPostB2674F9F": {
   "Type": "AWS::ApiGatewayV2::Integration",
   "Properties": {
    "ApiId": {
     "Ref": "ApiF70053CD"
    },
    "ConnectionId": {
     "Ref": "ApiVpcLink4F321C68"
    },
    "ConnectionType": "VPC_LINK",
    "IntegrationMethod": "ANY",
    "IntegrationType": "HTTP_PROXY",
    "IntegrationUri": {
     "Fn::GetAtt": [
      "GetPostAppServiceCloudmapService52F860BF",
      "Arn"
     ]
    },
    "PayloadFormatVersion": "1.0"
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/GET--posts--{id}/getPost/Resource"
   }
  },
  "ApiGETpostsid6F52630D": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "ApiF70053CD"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "GET /posts/{id}",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "ApiGETpostsidgetPostB2674F9F"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/GET--posts--{id}/Resource"
   }
  },
  "ApiPOSTpostscreatePostF4B703B7": {
   "Type": "AWS::ApiGatewayV2::Integration",
   "Properties": {
    "ApiId": {
     "Ref": "ApiF70053CD"
    },
    "IntegrationType": "AWS_PROXY",
    "IntegrationUri": {
     "Fn::GetAtt": [
      "CreatePostD3E67D61",
      "Arn"
     ]
    },
    "PayloadFormatVersion": "2.0"
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/POST--posts/createPost/Resource"
   }
  },
  "ApiPOSTpostscreatePostPermissionEDC29311": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "CreatePostD3E67D61",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:616138583583:",
       {
        "Ref": "ApiF70053CD"
       },
       "/*/*/posts"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/POST--posts/createPost-Permission"
   }
  },
  "ApiPOSTposts0AAB2A4C": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "ApiF70053CD"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "POST /posts",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "ApiPOSTpostscreatePostF4B703B7"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/Api/POST--posts/Resource"
   }
  },
  "GetPostLogGroup615A249A": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 30
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/LogGroup/Resource"
   }
  },
  "GetPostTaskDefTaskRoleB6AF59D2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AWSXRayDaemonWriteAccess"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/TaskDef/TaskRole/Resource"
   }
  },
  "GetPostTaskDefTaskRoleDefaultPolicy48191C35": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "cloudwatch:PutMetricData",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "dynamodb:BatchGetItem",
        "dynamodb:ConditionCheckItem",
        "dynamodb:DescribeTable",
        "dynamodb:GetItem",
        "dynamodb:GetRecords",
        "dynamodb:GetShardIterator",
        "dynamodb:Query",
        "dynamodb:Scan"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::ImportValue": "PreProdStage-DataStack:ExportsOutputFnGetAttPostsTableC82B36F0Arn40084DA1"
        },
        {
         "Ref": "AWS::NoValue"
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "Roles": [
     {
      "Ref": "GetPostTaskDefTaskRoleB6AF59D2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/TaskDef/TaskRole/DefaultPolicy/Resource"
   }
  },
  "GetPostTaskDef74D442CE": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "TABLE_NAME",
        "Value": {
         "Fn::ImportValue": "PreProdStage-DataStack:ExportsOutputRefPostsTableC82B36F06B4D022D"
        }
       },
       {
        "Name": "AWS_EMF_AGENT_ENDPOINT",
        "Value": "tcp://127.0.0.1:25888"
       },
       {
        "Name": "LOG_LEVEL",
        "Value": "DEBUG"
       },
       {
        "Name": "POWERTOOLS_SERVICE_NAME",
        "Value": "GetPostService"
       },
       {
        "Name": "POWERTOOLS_METRICS_NAMESPACE",
        "Value": "blogApp"
       },
       {
        "Name": "ENV",
        "Value": "dev"
       }
      ],
      "Essential": true,
      "HealthCheck": {
       "Command": [
        "CMD-SHELL",
        "curl -s http://127.0.0.1:8080/health"
       ],
       "Interval": 5,
       "Retries": 1,
       "StartPeriod": 10,
       "Timeout": 2
      },
      "Image": {
       "Fn::Sub": "616138583583.dkr.ecr.us-east-2.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-616138583583-us-east-2:be81be754e1d0de5677163c355e558fbb9398bf0caadea46d533ec2487b7aca1"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "GetPostLogGroup615A249A"
        },
        "awslogs-stream-prefix": "getPost",
        "awslogs-region": "us-east-2"
       }
      },
      "Name": "getPost",
      "PortMappings": [
       {
        "ContainerPort": 8080,
        "Protocol": "tcp"
       }
      ]
     },
     {
      "Environment": [
       {
        "Name": "AWS_REGION",
        "Value": "us-east-2"
       }
      ],
      "Essential": true,
      "HealthCheck": {
       "Command": [
        "CMD-SHELL",
        "curl -s http://localhost:2000"
       ],
       "Interval": 5,
       "Retries": 3,
       "StartPeriod": 10,
       "Timeout": 2
      },
      "Image": "amazon/aws-xray-daemon:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "GetPostLogGroup615A249A"
        },
        "awslogs-stream-prefix": "xray",
        "awslogs-region": "us-east-2"
       }
      },
      "MemoryReservation": 256,
      "Name": "xray",
      "PortMappings": [
       {
        "ContainerPort": 2000,
        "Protocol": "udp"
       }
      ]
     },
     {
      "Environment": [
       {
        "Name": "CW_CONFIG_CONTENT",
        "Value": "{\"logs\":{\"metrics_collected\":{\"emf\":{}}},\"metrics\":{\"metrics_collected\":{\"statsd\":{}}}}"
       }
      ],
      "Essential": true,
      "Image": "public.ecr.aws/cloudwatch-agent/cloudwatch-agent:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "GetPostLogGroup615A249A"
        },
        "awslogs-stream-prefix": "cloudwatch-agent",
        "awslogs-region": "us-east-2"
       }
      },
      "MemoryReservation": 50,
      "Name": "cloudwatch-agent",
      "PortMappings": [
       {
        "ContainerPort": 25888,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "GetPostTaskDefExecutionRoleAAEEA792",
      "Arn"
     ]
    },
    "Family": "PreProdStageAppStackGetPostTaskDef4893883B",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "GetPostTaskDefTaskRoleB6AF59D2",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/TaskDef/Resource"
   }
  },
  "GetPostTaskDefExecutionRoleAAEEA792": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/TaskDef/ExecutionRole/Resource"
   }
  },
  "GetPostTaskDefExecutionRoleDefaultPolicy7D07E747": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:ecr:us-east-2:616138583583:repository/cdk-hnb659fds-container-assets-616138583583-us-east-2"
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "GetPostLogGroup615A249A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "GetPostTaskDefExecutionRoleDefaultPolicy7D07E747",
    "Roles": [
     {
      "Ref": "GetPostTaskDefExecutionRoleAAEEA792"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "GetPostAppServiceA50C5323": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "NetworkCluster17B54D11"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [
       {
        "Ref": "GetPostDeploymentFailingFEBE5482"
       }
      ],
      "Enable": true,
      "Rollback": true
     },
     "DeploymentCircuitBreaker": {
      "Enable": true,
      "Rollback": true
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DeploymentController": {
     "Type": "ECS"
    },
    "EnableECSManagedTags": true,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "GetPostAppServiceSecurityGroup04A7E398",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "NetworkVpcPrivateSubnet1Subnet6DD86AE6"
       },
       {
        "Ref": "NetworkVpcPrivateSubnet2Subnet1BDBE877"
       },
       {
        "Ref": "NetworkVpcPrivateSubnet3Subnet8ABFAF5C"
       }
      ]
     }
    },
    "ServiceRegistries": [
     {
      "ContainerName": "getPost",
      "ContainerPort": 8080,
      "RegistryArn": {
       "Fn::GetAtt": [
        "GetPostAppServiceCloudmapService52F860BF",
        "Arn"
       ]
      }
     }
    ],
    "TaskDefinition": {
     "Ref": "GetPostTaskDef74D442CE"
    }
   },
   "DependsOn": [
    "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "GetPostTaskDefTaskRoleB6AF59D2"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/AppService/Service"
   }
  },
  "GetPostAppServiceSecurityGroup04A7E398": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "PreProdStage/AppStack/GetPost/GetPost/AppService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "NetworkVpc7FB7348F"
    }
   },
   "DependsOn": [
    "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "GetPostTaskDefTaskRoleB6AF59D2"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/AppService/SecurityGroup/Resource"
   }
  },
  "GetPostAppServiceSecurityGroupfromPreProdStageAppStackApiVpcLinkSg37FEBE428080944BDC9B": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from PreProdStageAppStackApiVpcLinkSg37FEBE42:8080",
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "GetPostAppServiceSecurityGroup04A7E398",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ApiVpcLinkSg585A62E1",
      "GroupId"
     ]
    },
    "ToPort": 8080
   },
   "DependsOn": [
    "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "GetPostTaskDefTaskRoleB6AF59D2"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/AppService/SecurityGroup/from PreProdStageAppStackApiVpcLinkSg37FEBE42:8080"
   }
  },
  "GetPostAppServiceCloudmapService52F860BF": {
   "Type": "AWS::ServiceDiscovery::Service",
   "Properties": {
    "DnsConfig": {
     "DnsRecords": [
      {
       "TTL": 60,
       "Type": "SRV"
      }
     ],
     "NamespaceId": {
      "Fn::GetAtt": [
       "NetworkClusterDefaultServiceDiscoveryNamespaceD090BA35",
       "Id"
      ]
     },
     "RoutingPolicy": "MULTIVALUE"
    },
    "HealthCheckCustomConfig": {
     "FailureThreshold": 1
    },
    "NamespaceId": {
     "Fn::GetAtt": [
      "NetworkClusterDefaultServiceDiscoveryNamespaceD090BA35",
      "Id"
     ]
    }
   },
   "DependsOn": [
    "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "GetPostTaskDefTaskRoleB6AF59D2"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/AppService/CloudmapService/Resource"
   }
  },
  "GetPostAppServiceTaskCountTarget29996380": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 10,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "NetworkCluster17B54D11"
       },
       "/",
       {
        "Fn::GetAtt": [
         "GetPostAppServiceA50C5323",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": "arn:aws:iam::616138583583:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "DependsOn": [
    "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "GetPostTaskDefTaskRoleB6AF59D2"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/AppService/TaskCount/Target/Resource"
   }
  },
  "GetPostAppServiceTaskCountTargetMemoryScaling89AB958B": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "PreProdStageAppStackGetPostAppServiceTaskCountTargetMemoryScaling31E7B885",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "GetPostAppServiceTaskCountTarget29996380"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageMemoryUtilization"
     },
     "TargetValue": 60
    }
   },
   "DependsOn": [
    "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "GetPostTaskDefTaskRoleB6AF59D2"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/AppService/TaskCount/Target/MemoryScaling/Resource"
   }
  },
  "GetPostAppServiceTaskCountTargetCpuScalingB0620444": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "PreProdStageAppStackGetPostAppServiceTaskCountTargetCpuScaling4981A93C",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "GetPostAppServiceTaskCountTarget29996380"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "TargetValue": 60
    }
   },
   "DependsOn": [
    "GetPostTaskDefTaskRoleDefaultPolicy48191C35",
    "GetPostTaskDefTaskRoleB6AF59D2"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/AppService/TaskCount/Target/CpuScaling/Resource"
   }
  },
  "GetPostRule216A33F2": {
   "Type": "AWS::Events::Rule",
   "Properties": {
    "EventPattern": {
     "detail-type": [
      "ECS Task State Change"
     ],
     "source": [
      "aws.ecs"
     ],
     "detail": {
      "clusterArn": [
       {
        "Fn::GetAtt": [
         "NetworkCluster17B54D11",
         "Arn"
        ]
       }
      ],
      "desiredStatus": [
       "STOPPED"
      ],
      "stopCode": [
       "ServiceSchedulerInitiated"
      ],
      "stoppedReason": [
       "Task failed container health checks"
      ],
      "containers": {
       "name": [
        "getPost"
       ]
      }
     }
    },
    "State": "ENABLED"
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/Rule/Resource"
   }
  },
  "GetPostDeploymentFailingFEBE5482": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "ComparisonOperator": "GreaterThanOrEqualToThreshold",
    "Dimensions": [
     {
      "Name": "RuleName",
      "Value": {
       "Ref": "GetPostRule216A33F2"
      }
     }
    ],
    "EvaluationPeriods": 1,
    "MetricName": "TriggeredRules",
    "Namespace": "AWS/Events",
    "Period": 10,
    "Statistic": "Average",
    "Threshold": 1,
    "TreatMissingData": "notBreaching",
    "Unit": "Count"
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/GetPost/GetPost/DeploymentFailing/Resource"
   }
  },
  "CreatePostServiceRole3F6FFE7F": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/CreatePost/CreatePost/ServiceRole/Resource"
   }
  },
  "CreatePostServiceRoleDefaultPolicy45EA3357": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "xray:PutTelemetryRecords",
        "xray:PutTraceSegments"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "dynamodb:BatchWriteItem",
        "dynamodb:DeleteItem",
        "dynamodb:DescribeTable",
        "dynamodb:PutItem",
        "dynamodb:UpdateItem"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::ImportValue": "PreProdStage-DataStack:ExportsOutputFnGetAttPostsTableC82B36F0Arn40084DA1"
        },
        {
         "Ref": "AWS::NoValue"
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "CreatePostServiceRoleDefaultPolicy45EA3357",
    "Roles": [
     {
      "Ref": "CreatePostServiceRole3F6FFE7F"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/CreatePost/CreatePost/ServiceRole/DefaultPolicy/Resource"
   }
  },
  "CreatePostD3E67D61": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Architectures": [
     "arm64"
    ],
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-616138583583-us-east-2",
     "S3Key": "a719789b9a9d29df4465106a3d79f53742df35de33fce3c8d5ebfba8cb5b63b2.zip"
    },
    "Description": "src/posts/create.lambda.ts",
    "Environment": {
     "Variables": {
      "LOG_LEVEL": "DEBUG",
      "POWERTOOLS_LOGGER_LOG_EVENT": "true",
      "POWERTOOLS_SERVICE_NAME": "CreateFunction",
      "POWERTOOLS_METRICS_NAMESPACE": "blogApp",
      "ENV": "dev",
      "TABLE_NAME": {
       "Fn::ImportValue": "PreProdStage-DataStack:ExportsOutputRefPostsTableC82B36F06B4D022D"
      },
      "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1"
     }
    },
    "Handler": "index.handler",
    "Layers": [
     "arn:aws:lambda:us-east-2:094274105915:layer:AWSLambdaPowertoolsTypeScript:15"
    ],
    "MemorySize": 256,
    "Role": {
     "Fn::GetAtt": [
      "CreatePostServiceRole3F6FFE7F",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "TracingConfig": {
     "Mode": "Active"
    }
   },
   "DependsOn": [
    "CreatePostServiceRoleDefaultPolicy45EA3357",
    "CreatePostServiceRole3F6FFE7F"
   ],
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/CreatePost/CreatePost/Resource",
    "aws:asset:path": "../asset.a719789b9a9d29df4465106a3d79f53742df35de33fce3c8d5ebfba8cb5b63b2.lambda",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Code"
   }
  },
  "CreatePostLogGroupF4918AE7": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": {
     "Fn::Join": [
      "",
      [
       "/aws/lambda/",
       {
        "Ref": "CreatePostD3E67D61"
       }
      ]
     ]
    },
    "RetentionInDays": 731
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/CreatePost/CreatePost/LogGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/+1XTW/bOBD9LeWxYLWtA/SQm+NkWwNJathGDmsExZicyKwpUiApua7g/77gly3H2+5222J92IMhc4aceTOjGT4NisHgonj9Ajb2FePrV1Isi27mgK0pbOzHDtmg6B5qtuhIBZ+HXyy5JC/J7pGOntTDZEQnzVIKNmuWCt2iI9CCkLAUUrjtH1ph2E1JW7MxT/+Z4OZKarZO6wrqaGRcf1C30Ci2IpfONEiJqNu3o2fbwVpRqnHdvh1ybtDaD2pkEJzQKkKjZ4IiAOH8Htw7cLiBLblckJfk8WwAngeK/9P0Y2kKnRj7z/+b6sbhHJYSD/KDbGitZiIY3m/2f27GE/84WKcTI1pw+NMb+wmkPYNa/BiM80FyJjDOB8mZwIhtOVYOjcJ9U8U7M62GzgFbVagcnSFrjHDbd0Y39aLzYLMrKfVmKKV39qFxS90onidJ1j2Xc7TMi [...]
   },
   "Metadata": {
    "aws:cdk:path": "PreProdStage/AppStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefApiF70053CD5653BA4D": {
   "Value": {
    "Ref": "ApiF70053CD"
   },
   "Export": {
    "Name": "PreProdStage-AppStack:ExportsOutputRefApiF70053CD5653BA4D"
   }
  },
  "ExportsOutputFnGetAttGetPostAppServiceA50C5323Name6E4CBB98": {
   "Value": {
    "Fn::GetAtt": [
     "GetPostAppServiceA50C5323",
     "Name"
    ]
   },
   "Export": {
    "Name": "PreProdStage-AppStack:ExportsOutputFnGetAttGetPostAppServiceA50C5323Name6E4CBB98"
   }
  },
  "ExportsOutputRefNetworkCluster17B54D113FA77A85": {
   "Value": {
    "Ref": "NetworkCluster17B54D11"
   },
   "Export": {
    "Name": "PreProdStage-AppStack:ExportsOutputRefNetworkCluster17B54D113FA77A85"
   }
  },
  "ExportsOutputRefCreatePostD3E67D61CCFCD440": {
   "Value": {
    "Ref": "CreatePostD3E67D61"
   },
   "Export": {
    "Name": "PreProdStage-AppStack:ExportsOutputRefCreatePostD3E67D61CCFCD440"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
